--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,21 +6,12 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <% if flash[:notice] %>
-      <div class="notification is-success global-notification">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
-    <% if flash[:alert] %>
-    <div class="notification is-danger global-notification">
-      <p class="alert"><%= alert %></p>
-    </div>
-    <% end %>
      <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to root_path, class:"navbar-item" do %>
@@ -31,7 +22,7 @@
         <span></span>
         <span></span>
       </div>
-    </div>
+    </div>    
 
       <div id="navbar" class="navbar-menu">
         <div class="navbar-end">
@@ -45,7 +36,7 @@
             <%= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
             <div class="navbar-dropdown is-right">
               <%= link_to current_user.username, edit_user_registration_path, class:"navbar-item" %>
-              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
+              <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete }, class:"navbar-item" %>
             </div>
           </div>
          <% else %>
@@ -70,7 +61,7 @@
         </div>
     </div>
   </nav>
-
+<%= render 'shared/flash' %>
 <section class="section">
   <div class="container">
     <%= yield %>
